--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Uptime Kuma",
-    "short_name": "Uptime Kuma",
+    "name": "IC Africa Uptime",
+    "short_name": "IC Africa Uptime",
     "start_url": "/",
     "background_color": "#fff",
     "display": "standalone",
